jvm/src/main/java/com/example/error/Student.java
package com.example.error;

/**
 * lingfan
 * 2019-12-20 11:40
 */
public class Student {

    private String name;

    private int age;

    private int sex;
}
